fix card text overflow and size in percent

--- a/lembeachsite/components/Card/Card.module.scss
+++ b/lembeachsite/components/Card/Card.module.scss
@@ -12,10 +12,11 @@
     margin: auto;
   }
   .text{
-    font-size: 18px;
+    font-size: 130%;
     text-align: justify;
     margin-bottom: 26px;
     margin-top: 0;
+    overflow: hidden;
   }
   .button{
     display: block;
